@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/questions.R
+\name{get_question_details}
+\alias{get_question_details}
+\title{Extract question name and score from header}
+\usage{
+get_question_details(dir)
+}
+\arguments{
+\item{dir}{Directory containing the test files for a question}
+}
+\value{
+A data.frame object with colums name, file, and max_points
+}
+\description{
+This function is inspired by the roxygen2 decoration of source files with content
+used to create the manual and help files. Here we expect two tags \code{@title}
+with the displayed title of the question, and \code{@score} with the number of
+available points.
+}
